--- a/Calendar.html
+++ b/Calendar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Calendar</title>
-    <link rel = "stylesheet" href = "./style.css">
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <div class="container flex">
@@ -22,6 +22,7 @@
                 <div>Thur</div>
                 <div>Fri</div>
                 <div>Sat</div>
+                <div>Sun</div>
             </div>
             <div class="days flex">
                 <div class="previous-days">26</div>
@@ -31,7 +32,7 @@
                 <div class="previous-days">30</div>
                 <div class="previous-days">31</div>
                 <div>1</div>
-                <div class="today">11</div>
+                <div class="today">14</div>
                 <div>31</div>
                 <div class="next-days">1</div>
                 <div class="next-days">2</div>
@@ -42,6 +43,6 @@
         </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
